@@ -1,3 +1,10 @@
+Sat Apr 02 11:45:52 2005  Nanbor Wang  <nanbor@exothermic.txcorp.com>
+
+	* DAnCE/Plan_Launcher/Plan_Launcher.h:
+	* DAnCE/Plan_Launcher/Plan_Launcher.cpp: Merged from xsc_handler_1
+	  branch.  Added a missing break statement, otherwise, it will not
+	  run. 
+
 Thu Mar 31 20:31:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * DAnCE/ciao/NodeApplication_Impl.h:
